fix: z-index

--- a/src/components/admin/table-list/table-list-nav/TableListNav.scss
+++ b/src/components/admin/table-list/table-list-nav/TableListNav.scss
@@ -3,8 +3,10 @@
 .table-list-nav {
 	position: sticky;
 	top: var(--layout-navbar-height);
+	z-index: 88;
 
 	.table-list-nav-wrapper {
+		z-index: 88;
 		border-bottom: solid 1px var(--primary);
 	}
 
